feat(vehicle): impl. delete group endpoint
Closes #22
