# endpoints/router.go
@@ -49,6 +49,7 @@ func GetRouter() http.Handler {
 	router.HandleFunc("/vehicle/", use(CreateNewVehicle, TokenAuthMiddleware, CORSMiddleware)).Methods("POST")
 	router.HandleFunc("/vehicle/group/", use(GetAllGroups, CORSMiddleware)).Methods("GET")
 	router.HandleFunc("/vehicle/group/", use(CreateNewGroup, TokenAuthMiddleware, CORSMiddleware)).Methods("POST")
+	router.HandleFunc("/vehicle/group/{group_id}", use(DeleteGroup, TokenAuthMiddleware, CORSMiddleware)).Methods("DELETE")
 	router.HandleFunc("/vehicle/{plate_id}/agent", use(VehicleSetAgent, TokenAuthMiddleware, CORSMiddleware)).Methods("POST")
 	router.HandleFunc("/vehicle/{plate_id}/agent", use(VehicleUnsetAgent, TokenAuthMiddleware, CORSMiddleware)).Methods("DELETE")
 	router.HandleFunc("/vehicle/{plate_id}", use(GetVehicle, CORSMiddleware)).Methods("GET")
